src/main/kotlin/com/example/error/InValidMoveException.kt
package com.example.error

class InValidMoveException : Exception("Invalid move played.")